--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "Yantramanav", sans-serif;
+  font-family: 'Yantramanav', sans-serif;
   background-color: #fff;
 }
 
@@ -23,6 +23,10 @@ ol {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.section-container {
+  padding: 120px 70px 0 70px;
 }
 
 ::selection {
