--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -3,3 +3,33 @@
 // font-family: 'Gochi Hand', cursive;
 // font-family: 'Roboto', sans-serif;
 // font-family: 'Yantramanav', sans-serif;
+
+#trending {
+  font-family: 'Roboto', sans-serif;
+  .featured-products-container {
+    .product-card-content {
+      a {
+        color: #727272;
+        font-size: 11px;
+        text-transform: uppercase;
+        font-weight: 700;
+      }
+      .product-title {
+        font-family: 'Yantramanav', sans-serif;
+        font-size: 17px;
+        color: black;
+        font-weight: 600;
+      }
+      .product-category {
+        font-size: 14px;
+        text-transform: capitalize;
+        font-weight: initial;
+      }
+      span {
+        font-family: 'Yantramanav', sans-serif;
+        font-size: 14px;
+        font-weight: 800;
+      }
+    }
+  }
+}
