--- a/assets/scss/components/_title.scss
+++ b/assets/scss/components/_title.scss
@@ -1,7 +1,7 @@
 .section-title {
   text-align: center;
   text-transform: uppercase;
-  padding-bottom: 36px;
+  padding: 50px 0;
 
   span {
     font-size: 11px;
